JPA Save product and test it